syntax = "proto3";
package chat;

import "google/protobuf/timestamp.proto";

option java_package = "com.starter.protomeme.chat";
option java_multiple_files = true;

service ChatService {
  rpc makeSession(SessionRequest) returns (stream SessionResponse);

  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);

  rpc sessionListener(SessionListenerRequest) returns (stream SessionRequest);

  rpc sessionCreated(SessionResponse) returns (SessionResponse);

  rpc getSessionMessages(GetSessionsRequest) returns (stream ChatMessage);

  rpc closeSession(CloseSessionRequest) returns (stream CloseSessionRequest);

}

enum CipherMode {
  ECB = 0;
  CBC = 1;
  PCBC = 2;
  CFB = 3;
  OFB = 4;
  CTR = 5;
  RD = 6;
}

enum Padding {
  ZEROS = 0;
  ANSIX923 = 1;
  PKCS7 = 2;
  ISO10126 = 3;
}

enum Status {
  SUCCESS = 0;
  WAITING = 1;
  ERROR = 2;
}

enum MessageStatus {
  TEXT = 0;
  SERVER = 1;
  SESSION_NOT_FOUND = 2;
  FILE = 3;
}

message SessionRequest {
  string session_id = 1;
  string from = 2;
  string to = 3;
  bytes public_g = 4;
  bytes public_p = 5;
  bytes public_a = 6;
  string cipher = 7;
  CipherMode cipher_mode = 8;
  Padding padding = 9;
}

message SessionResponse {
  string session_id = 1;
  bytes public_b = 2;
  SessionInfo session_info = 3;
  Status status = 4;
}

message SessionInfo {
  string session_id = 1;
  string sender = 2;
  string recipient = 3;
  string cipher = 4;
  CipherMode cipher_mode = 5;
  Padding padding = 6;
  bytes iv = 7;
}

message ChatMessage {
  string session_id = 1;
  string sender = 2;
  string recipient = 3;
  bytes message = 4;
  google.protobuf.Timestamp timestamp = 5;
  MessageStatus message_status = 6;
}

message SessionListenerRequest {
  string user_id = 1;
}

message GetSessionsRequest {
  string session_id = 1;
}

message CloseSessionRequest {
  string session_id = 1;
}
